@@ -1,40 +1,40 @@
 package com.wish.llm;
 
+import com.wish.models.context.BaseUserContext;
 import org.junit.jupiter.api.Test;
+import org.springframework.ai.chat.memory.MessageWindowChatMemory;
 import org.springframework.ai.chat.messages.AssistantMessage;
 import org.springframework.ai.chat.messages.UserMessage;
-import org.springframework.ai.chat.model.ChatModel;
 
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.mockito.Mockito.mock;
 
 class LLMChatClientMemoryTest {
 
     @Test
     void addMemoryAppendsSingleMessageWithoutDuplicatingHistory() {
-        LLMChatClient client = new LLMChatClient(mock(ChatModel.class), List.of());
-        String conversation = "conv-1";
+        var chatMemory = MessageWindowChatMemory.builder().build();
+        BaseUserContext context = new BaseUserContext("conv-1", chatMemory);
 
-        client.addUserMemory("hello", conversation);
-        client.addMemory(new AssistantMessage("hi"), conversation);
+        context.addUserMemory("hello");
+        context.addMemory(new AssistantMessage("hi"));
 
-        assertEquals(2, client.getChatMemory().get(conversation).size());
+        assertEquals(2, context.getAllMessages().size());
 
-        client.addMemory(new UserMessage("again"), conversation);
-        assertEquals(3, client.getChatMemory().get(conversation).size());
+        context.addMemory(new UserMessage("again"));
+        assertEquals(3, context.getAllMessages().size());
     }
 
     @Test
     void replaceMemoryOverwritesConversation() {
-        LLMChatClient client = new LLMChatClient(mock(ChatModel.class), List.of());
-        String conversation = "conv-2";
+        var chatMemory = MessageWindowChatMemory.builder().build();
+        BaseUserContext context = new BaseUserContext("conv-2", chatMemory);
 
-        client.addUserMemory("old", conversation);
-        client.replaceMemory(List.of(new UserMessage("new"), new AssistantMessage("reply")), conversation);
+        context.addUserMemory("old");
+        context.replaceMemory(List.of(new UserMessage("new"), new AssistantMessage("reply")));
 
-        assertEquals(2, client.getChatMemory().get(conversation).size());
-        assertEquals("new", client.getChatMemory().get(conversation).getFirst().getText());
+        assertEquals(2, context.getAllMessages().size());
+        assertEquals("new", context.getAllMessages().get(0).getText());
     }
 }
